# aiknife

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  .tmuxp.yaml  Cargo.toml  Justfile  README.md  deny.toml  rust-toolchain.toml  typos.toml
aik/: Cargo.toml
aik/src/: main.rs
aiknife/: Cargo.toml
aiknife-jsonrpc/: Cargo.toml
aiknife-jsonrpc/src/: lib.rs  mod.rs  server.rs  server2.rs  shared.rs
aiknife-jsonrpc/src/transport/: mod.rs  stdio.rs  stream.rs
aiknife-ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
aiknife-ui/src/: App.css  App.tsx  bindings.ts  styles.css
aiknife-ui/src-tauri/: Cargo.toml  tauri.conf.json
aiknife-ui/src-tauri/capabilities/: default.json
aiknife-ui/src-tauri/icons/: build_icons.sh  icon.afphoto  icon.icns
aiknife-ui/src-tauri/src/: chat.rs  error.rs  lib.rs  main.rs
aiknife/src/: error.rs  lib.rs  tokenize.rs
aiknife/src/audio/: device.rs  mod.rs  stream.rs
aiknife/src/audio/device/: file.rs  mod.rs  system.rs
aiknife/src/chat/: mod.rs
aiknife/src/mcp/: README.md  client.rs  mod.rs  schema.json  server.rs  shared.rs  transport.rs  types.rs
aiknife/src/mcp/jsonrpc/: mod.rs  server.rs  server2.rs  shared.rs
aiknife/src/util/: mod.rs  threading.rs
aiknife/test_data/: gen_known_answers.py  update_answers.sh
aiknife/test_data/input/: russian-book.txt  short_text
aiknife/test_data/output/cl100k_base/: chinese-book.txt  p50k_base.tiktoken  r50k_base.tiktoken  russian-book.txt  short_text
aiknife/test_data/output/p50k_base/: chinese-book.txt  p50k_base.tiktoken  russian-book.txt
aiknife/test_data/output/p50k_edit/: p50k_base.tiktoken  r50k_base.tiktoken  short_text
aiknife/test_data/output/r50k_base/: chinese-book.txt  r50k_base.tiktoken
instoken/: Cargo.toml
instoken-bench/: Cargo.toml  build.rs
instoken-bench/benches/: regex_vs_ac.rs
instoken-bench/src/: lib.rs  tiktoken.rs
instoken-bench/tests/: bpe.proptest-regressions  bpe.rs  encode.proptest-regressions  encode.rs  sandbox.rs
instoken/src/: bpe.rs  error.rs  iterator.rs  lib.rs  token.rs
instoken/src/encoder/: data.rs  hash.rs  mod.rs
instoken/tokens/: download-openai.sh
instoken/tokens/p50k_base/: p50k_base.tiktoken
instoken/tokens/p50k_edit/: p50k_edit.tiktoken
scripts/: mcp-proxy.sh  mcp.sh
