[workspace]
resolver = "2"

members = [
	"aiknife",
	"aik",
	"instoken",
	"instoken-bench",
	"aiknife-ui/src-tauri",
]

[workspace.dependencies]
clap = { version = "4.1.13", features = ["derive", "env"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = [
	"env-filter",
	"json",
	"local-time",
	"serde",
	"serde_json",
	"parking_lot",
] }
aho-corasick = "0.7.20"
base64 = "0.21.0"
fancy-regex = "0.11.0"
once_cell = "1.17.1"
regex = "1.7.3"
rust-embed = { version = "6.6.1", features = ["compression"] }
rustc-hash = "1.1.0"
snafu = "0.7.4"
strum = { version = "0.24.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tiktoken-rs = "0.5.0"
tauri = { version = "2.0.0", features = [] }
serde_json = "1.0"
aiknife = { path = "../../aiknife" }
proptest = "1.1.0"
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
