[workspace]
resolver = "2"

members = [
  "aiknife",
  "aik",
  "instoken",
  "instoken-bench",
  "aiknife-ui/src-tauri",
]

[workspace.dependencies]
aho-corasick = "0.7.20"
aiknife = { path = "../../aiknife" }
anyhow = "1.0"
base64 = "0.21.0"
clap = { version = "4.1.13", features = ["derive", "env"] }
fancy-regex = "0.11.0"
futures = "0.3"
once_cell = "1.17.1"
proptest = "1.1.0"
regex = "1.7.3"
reqwest = { version = "0.11", features = ["json"] }
rust-embed = { version = "6.6.1", features = ["compression"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7.4"
specta = { version = "=2.0.0-rc.20", features = ["uuid"] }
specta-typescript = "0.0.7"
strum = { version = "0.24.1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
tiktoken-rs = "0.5.0"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "json",
  "local-time",
  "serde",
  "serde_json",
  "parking_lot",
] }
uuid = { version = "1.11.0", features = [
  "v5",
  "v6",
  "v7",
  "v8",
  "zerocopy",
  "serde",
  "arbitrary",
] }
