[workspace]
resolver = "2"

members = [
  "aiknife",
  "aik",
  "instoken",
  "instoken-bench",
  "aiknife-ui/src-tauri",
]

[workspace.dependencies]
aho-corasick       = "0.7.20"
aiknife            = { path = "../../aiknife" }
anyhow             = "1.0"
assertables        = "9.4.0"
async-openai       = "0.25"
base64             = "0.21.0"
clap               = { version = "4.1.13", features = ["derive", "env"] }
cpal               = "0.15.3"
crossbeam          = { version = "0.8.4", features = ["crossbeam-channel"] }
either             = "1.13.0"
expect-test        = "1.5.0"
fancy-regex        = "0.11.0"
futures            = "0.3"
itertools          = "0.13.0"
log                = "0.4.22"
once_cell          = "1.17.1"
proptest           = "1.1.0"
regex              = "1.7.3"
reqwest            = { version = "0.11", features = ["json"] }
rust-embed         = { version = "6.6.1", features = ["compression"] }
rustc-hash         = "1.1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
snafu              = "0.7.4"
specta             = { version = "=2.0.0-rc.20", features = ["uuid"] }
specta-typescript  = "0.0.7"
strum              = { version = "0.24.1", features = ["derive"] }
symphonia          = { version = "0.5.4", features = ["all-codecs", "opt-simd"] }
tauri              = { version = "2.0.0", features = [] }
tauri-build        = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-specta       = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
thiserror          = "1.0.66"
tiktoken-rs        = "0.5.0"
tokio              = { version = "1", features = ["full"] }
tokio-stream       = { version = "0.1.16", features = ["full"] }
tokio-util         = { version = "0.7", features = ["full"] }
tracing            = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "local-time", "serde", "serde_json", "parking_lot"] }
uuid               = { version = "1.11.0", features = ["v5", "v6", "v7", "v8", "zerocopy", "serde", "arbitrary"] }
walkdir            = "2.5.0"
