[package]
name = "aik"
description = "Command line experiments with LLM-like AI tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiknife = { path = "../aiknife" }
clap = { version = "4.1.13", features = ["derive", "env"] }
color-eyre = "0.6.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "local-time", "serde", "serde_json", "parking_lot"] }
