[package]
name = "aik"
description = "Command line experiments with LLM-like AI tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiknife = { path = "../aiknife" }
clap = { workspace = true }
color-eyre = "0.6.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
