[package]
name = "aiknife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tiktoken-rs = { workspace = true }
