[package]
edition = "2021"
name    = "aiknife"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Enable this feature to derive the `specta::Type` trait for all public serializable types
# Used when the front-end is a Tauri app
tauri = ["dep:specta"]

[dependencies]
anyhow       = { workspace = true }
async-openai = { workspace = true }
cpal         = { workspace = true }
crossbeam    = { workspace = true }
either       = { workspace = true }
futures      = { workspace = true }
itertools    = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
specta       = { workspace = true, optional = true }
symphonia    = { workspace = true }
tiktoken-rs  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
assertables        = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir            = { workspace = true }
