[package]
name = "instoken"
description = "Instoken is a pure Rust re-write of tiktoken with performance enhancements and better Rust ergonomics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.20"
base64 = "0.21.0"
fancy-regex = "0.11.0"
once_cell = "1.17.1"
regex = "1.7.3"
rust-embed = { version = "6.6.1", features = ["compression"] }
rustc-hash = "1.1.0"
snafu = "0.7.4"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
proptest = "1.1.0"
