[package]
description = "Instoken is a pure Rust re-write of tiktoken with performance enhancements and better Rust ergonomics"
edition     = "2021"
name        = "instoken"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = { workspace = true }
base64       = { workspace = true }
fancy-regex  = { workspace = true }
once_cell    = { workspace = true }
regex        = { workspace = true }
rust-embed   = { workspace = true }
rustc-hash   = { workspace = true }
snafu        = { workspace = true }
strum        = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
