[package]
authors = ["you"]
description = "AI Knife User Interface"
edition = "2021"
name = "aiknife-ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "aiknife_lib"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
aiknife = { path = "../../aiknife", features = ["tauri"] }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-specta = { workspace = true }
