[package]
authors = ["you"]
description = "AI Knife User Interface"
edition = "2021"
name = "aiknife-ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "aiknife_ui_lib"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
aiknife = { path = "../../aiknife", features = ["tauri"] }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-specta = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-log = "2"
log = { workspace = true } # used only for the `LogLevel` enum
tracing = { workspace = true, features = ["log", "log-always"] } # forward all events to `log` crate
tracing-subscriber.workspace = true
strum.workspace = true

[dev-dependencies]
expect-test.workspace = true
