[package]
authors     = ["you"]
description = "AI Knife User Interface"
edition     = "2021"
name        = "aiknife-ui"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name       = "aiknife_ui_lib"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
aiknife                      = { path = "../../aiknife", features = ["tauri"] }
anyhow                       = { workspace = true }
async-openai.workspace       = true
futures                      = { workspace = true }                                   # used only for the `LogLevel` enum
log                          = { workspace = true }                                   # used only for the `LogLevel` enum
serde                        = { workspace = true }
serde_json                   = { workspace = true }
specta                       = { workspace = true }
specta-typescript            = { workspace = true }
strum.workspace              = true
tauri                        = { workspace = true }
tauri-plugin-log             = "2"
tauri-plugin-shell           = { workspace = true }
tauri-specta                 = { workspace = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true }
tokio-util                   = { workspace = true }
tracing                      = { workspace = true, features = ["log", "log-always"] } # forward all events to `log` crate
tracing-subscriber.workspace = true
uuid                         = { workspace = true }

[dev-dependencies]
expect-test.workspace = true
